--- a/resources/views/complaint/detail.edge
+++ b/resources/views/complaint/detail.edge
@@ -1,1 +1,6 @@
-<h2>Detail a complaint {{ id }} </h2>
+@layout('layouts/main')
+@set('title', 'Detail')
+
+@section('body')
+    <h2>Detail a complaint {{ id }} </h2>
+@end
