--- a/resources/views/account/register.edge
+++ b/resources/views/account/register.edge
@@ -18,13 +18,26 @@
             <form method="POST" action="register">
               <h2> New Registration form</h2>
               <hr>
-              <input class="form-control mb-4" type="text" name="name" placeholder="name"  required>
 
-              <input class="form-control mb-4" type="email" name="email" placeholder="email"  required>
+              @if(flashMessages.has('errors.name'))
+                <p class="text-danger"> {{ flashMessages.get('errors.name') }} </p>
+              @end
+              <input class="form-control mb-4" type="text" name="name" placeholder="name *"  required>
 
-              <input class="form-control mb-4" type="password" name="password" placeholder="password" required>
+              @if(flashMessages.has('errors.email'))
+                <p class="text-danger"> {{ flashMessages.get('errors.email') }} </p>
+              @end
+              <input class="form-control mb-4" type="email" name="email" placeholder="email *"  required>
 
-              <input class="form-control mb-4" type="password" placeholder="confirm password" required>
+              @if(flashMessages.has('errors.password'))
+                <p class="text-danger"> {{ flashMessages.get('errors.password') }} </p>
+              @end
+              <input class="form-control mb-4" type="password" name="password" placeholder="password *" required>
+
+              @if(flashMessages.has('errors.password_confirmation'))
+                <p class="text-danger"> {{ flashMessages.get('errors.password_confirmation') }} </p>
+              @end
+              <input class="form-control mb-4" type="password" name="password_confirmation" placeholder="confirm password *" required>
 
               <input type="submit" class="button btn-primary w-100" value="Register">
             </form>
