--- a/resources/views/complaint/create.edge
+++ b/resources/views/complaint/create.edge
@@ -13,14 +13,30 @@
             <form action="/complaint" method="post">
               <h2>Send us your thoughts</h2>
               <hr>
+
+              @if(flashMessages.has('errors.comment'))
+                <p class="text-danger"> {{ flashMessages.get('errors.comment') }} </p>
+              @end
               <input class="form-control mb-3" type="text" name="comment" placeholder="Comment *" required>
-              <select class="form-select mb-3" name="complaintTypeId">
+              
+              @if(flashMessages.has('errors.complaintTypeId'))
+                <p class="text-danger"> {{ flashMessages.get('errors.complaintTypeId') }} </p>
+              @end
+              <select class="form-select mb-3" name="complaintTypeId" required>
                   @each(type in types)
                     <option value="{{ type.id }}">{{ type.name }}</option>
                   @end
               </select>
-              <input class="form-control mb-3" type="file" name="fileName">
-              <input class="form-control" type="text" placeholder="Location" name="location">
+
+              @if(flashMessages.has('errors.fileName'))
+                <p class="text-danger"> {{ flashMessages.get('errors.fileName') }} </p>
+              @end
+              <input class="form-control mb-3" type="file" placeholder="fileName (optional)" name="fileName">
+              
+              @if(flashMessages.has('errors.location'))
+                <p class="text-danger"> {{ flashMessages.get('errors.location') }} </p>
+              @end
+              <input class="form-control" type="text" placeholder="Location (optional)" name="location">
               <input type="submit" class="button btn-primary w-100 mt-3" value="Send">
             </form>
 
