download file and file security added

--- a/resources/views/complaint/create.edge
+++ b/resources/views/complaint/create.edge
@@ -10,7 +10,7 @@
 @section('body')
     <div class="cardContainer">
         <div class="card p-4 bg-light">
-            <form action="/complaint" method="post">
+            <form action="/complaint" method="post" enctype='multipart/form-data'>
               <h2>Send us your thoughts</h2>
               <hr>
 
