--- a/resources/views/complaint/edit.edge
+++ b/resources/views/complaint/edit.edge
@@ -16,7 +16,7 @@
                           _method: 'PUT'
                         }
                       })
-                    }}">
+                    }}" enctype='multipart/form-data'>
               <h2>Edit or delete your complaints</h2>
               <hr>
 
